# portfolio-market-intelligence

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-v0.1.md  dependency-register.md  implementation-roadmap-v1.md  intelligence-json-schema-v0.1.md  worldmonitor-adoption-audit.md  worldmonitor-module-adoption-matrix-v1.md
examples/: portfolio.example.json
scripts/: generate_demo.py
src/portfolio_intelligence/: __init__.py  adapters.py  deduplication.py  engines.py  exporter.py  models.py  pipeline.py  portfolio_loader.py
tests/: test_core.py  test_ingestion_pipeline.py
